<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_extra_large">

        <LinearLayout
            android:id="@+id/layout_notification"
            style="@style/LinearLayout.NavButton">

            <TextView
                style="@style/TextView.Settings"
                android:text="@string/label_notification"/>

        </LinearLayout>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_extra_large">

        <LinearLayout
            android:id="@+id/layout_feedback"
            style="@style/LinearLayout.NavButton">

            <TextView
                style="@style/TextView.Settings"
                android:text="@string/label_feedback"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_about_app"
            style="@style/LinearLayout.NavButton">

            <TextView
                style="@style/TextView.Settings"
                android:text="@string/label_about_app"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_logout"
        style="@style/LinearLayout.NavButton">

        <TextView
            style="@style/TextView.Settings.Logout"
            android:layout_centerInParent="true"
            android:text="@string/label_logout"/>

    </LinearLayout>

</LinearLayout>