<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_extra_large"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_sz_extra_large"
        android:text="@string/label_confirm_phone"/>

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/text_will_send_verification_code"
        style="@style/TextView.Account"
        android:padding="@dimen/margin_extra_large"
        android:gravity="center_vertical"
        android:text="@string/label_will_send_verification_code"/>

    <TextView
        android:id="@+id/text_phone"
        style="@style/TextView.Account"
        android:paddingLeft="@dimen/margin_extra_large"
        android:paddingBottom="@dimen/margin_extra_large"
        android:textColor="@color/bbutton_danger"
        android:text="0061 451271020"/>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/b_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/label_ok"
            android:textSize="@dimen/text_sz_large" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey_extra_light" />

        <Button
            android:id="@+id/b_dialog_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/label_cancel"
            android:textSize="@dimen/text_sz_large" />
    </LinearLayout>

</LinearLayout>